Fixed some alignment issues.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -604,9 +604,9 @@ hr {
 
 #MainContentDiv
   {
-  width: 940px;
+  width: 900px;
   height: auto;
-  margin: 0 auto 0 auto;
+  margin: 20px auto 0 auto;
 }
 
 #FooterWrap
@@ -801,4 +801,12 @@ hr {
 }
 .footer_image {
   height: 45px;
+}
+
+.TextHeader {
+  font-size: 21px;
+  color: #1F1E5A;
+  font-weight: 600;
+  line-height: 25px;
+  margin-bottom: 10px;
 }
